# PokePoke

./: .eslintrc.json  .gitignore  GET_QUERY_SCHEMA_TEST_REPORT.md  KUSTO_QUERIES_TEST_SUMMARY.md  LIST_KUSTO_QUERIES_TEST_REPORT.md  MCP_LIST_KUSTO_QUERIES_SUMMARY.txt  MCP_TOOL_TEST_REPORT.md  POC_RESULTS.md  README.md  TEST_CASE_DETAILS.md  TEST_INDEX.md  TEST_SUMMARY.md  check_item.py  check_ready.py  debug_command.py  demo-copilot-cli.py  demo_banner.py  example_worktree_integration.py  icm_mcp_test_output.txt  jest.config.js  list_all_mcp_tools.cjs  list_all_tools.py  list_kusto_queries_test_results.txt  list_tools_now.cjs  mcp-test-config.json  mcp-test.js  mcp-test.mjs  mcp_client_test.cjs  mcp_tools_list.txt  package-lock.json  package.json  poc_sdk_test.py  pokepoke.py  pyproject.toml  quick_mcp_test.cjs  requirements-dev.txt  requirements.txt  setup.py  simple_mcp_test.cjs  temp_ready.json  (+19 more)
.beads/: issues.jsonl
.githooks/: README.md  check-build-and-warnings.ps1  check-build.ps1  check-code-quality.ps1  check-compile-warnings.ps1  check-coverage.ps1  check-coverage.py  check-desktop-lint.ps1  check-desktop.ps1  check-file-length.ps1  check-mcp-health.ps1  check-skipped-tests.ps1  pre-commit  pre-commit.ps1  verify-integrity.ps1
.github/: CODEOWNERS  copilot-instructions.md
.pokepoke/: config.yaml  maintenance_state.json  model_history.jsonl  model_stats.json
desktop/: eslint.config.js  launch.ps1  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: allowed-directories.md  (+3 more)
(+189 files in other folders)
